# Shepherd

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
kafka_kinesis/: __init__.py  config.py  main.py
kafka_kinesis/common/: scheduler.py  utils.py
kafka_kinesis/consumer/: __init__.py  consumer.py
kafka_kinesis/forwarder/: __init__.py  kinesis_forwarder.py  serializers.py
kafka_kinesis/scripts/: kinesis_test_consumer.py  test_consumer.properties
kafka_kinesis/serdes/: deserializers.py
tests/: test_kafka_kinesis.py
