[tool.poetry]
name = "kafka-kinesis"
version = "0.1.0"
description = "Kafka to Kinesis utility for using downstream AWS services"
authors = ["shaurya.rawat <shaurya.rawat@new-work.se>"]

[tool.poetry.dependencies]
python = "^3.8"
aiokafka = "^0.8.0"
boto3 = "^1.26.16"
amazon-kclpy = "^2.0.6"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
mypy = "^0.991"
flake8 = "4.0.1"
pylint = "^2.15.8"

[tool.mypy]
python_version = "^3.8"
warn_return_any = false
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
